@@ -46,6 +46,9 @@ Stone Soup 0.6
 * More generous stacking of ammunition.
 * Tiles: re-added doll editing screen ('-' command).
 * Tiles: added clickable spells display (toggle with '_' command).
+* Added option explore_delay, which can be used to make the delay
+  between auto-explore moves different than the delay between other
+  types of of travel moves.
 
 
 Stone Soup 0.5.2 (20091008)
